# OlfactoryNet

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
configs/: config.yaml
configs/model/: gat.yaml  gcn.yaml  gin.yaml  mpnn.yaml
configs/sweep/: gat_sweep.yaml  gcn_sweep.yaml  loss_sweep.yaml
configs/training/: default.yaml
scripts/: app.py  predict.py  train.py
src/olfactorynet/: __init__.py
src/olfactorynet/models/: __init__.py  base.py  gat.py  gcn.py  gin.py  heads.py  mpnn.py
src/olfactorynet/training/: __init__.py  metrics.py  trainer.py
tests/: __init__.py  conftest.py  test_featurizer.py  test_metrics.py  test_models.py  test_splits.py
